--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
     <article>
       <h1 class="overskrift">KVINDERNES ØL LOGE</h1>
       <h3 class="x">X</h3>
-      <h2 class="tekst">TO ØL</h2>
+      <h2 class="tekst">To Øl</h2>
     </article>
+    <img class="baggrund" src="foto/beer2.png" alt="ØL" />
     <h1>Konceptet bag KØL</h1>
+    <div class="p_grid">
+      <p>Logen er stiftet af en gruppe veninder, der alle værdsætter et godt selskab og smagen af en god øl. Den består af forskellige vennegrupper på kryds og tværs, men fælles for alle er, at de er nysgerrige på at få et større kendskab til den mangfoldige øl verden.</p>
+    </div>
+    <section>
+      <article class="billedgrid">
+        <div>
+          <h2>MØD ET MEDLEM</h2>
+          <h3>Michelle Sackmann</h3>
+          <p>Michelle har været medlem i KØL ligesiden det startede og hun er lidt af en øl connoisseur. Hun kender en god øl hun smager den og så bidrager hun særligt til logen med sit skønne grin.</p>
+        </div>
+
+        <figure class="gallery">
+          <img src="img/image-3.webp" alt="" width="1000" height="667" />
+        </figure>
+      </article>
+    </section>
   </body>
 </html>
