--- a/index.html
+++ b/index.html
@@ -18,18 +18,26 @@
     <div class="p_grid">
       <p>Logen er stiftet af en gruppe veninder, der alle værdsætter et godt selskab og smagen af en god øl. Den består af forskellige vennegrupper på kryds og tværs, men fælles for alle er, at de er nysgerrige på at få et større kendskab til den mangfoldige øl verden.</p>
     </div>
-    <section>
-      <article class="billedgrid">
+
+    <div class="grid">
+      <div class="billedgrid">
+        <img src="foto/potraet.webp" alt="Michelle" />
         <div>
           <h2>MØD ET MEDLEM</h2>
           <h3>Michelle Sackmann</h3>
-          <p>Michelle har været medlem i KØL ligesiden det startede og hun er lidt af en øl connoisseur. Hun kender en god øl hun smager den og så bidrager hun særligt til logen med sit skønne grin.</p>
+          <p class="medlem_tekst">Michelle har været medlem i KØL ligesiden det startede og hun er lidt af en øl connoisseur. Hun kender en god øl hun smager den og så bidrager hun særligt til logen med sit skønne grin.</p>
         </div>
-
-        <figure class="gallery">
-          <img src="img/image-3.webp" alt="" width="1000" height="667" />
-        </figure>
-      </article>
-    </section>
+      </div>
+      <div class="grid2">
+        <img src="foto/haner.webp" alt="Haner" />
+        <img class="box-1" src="foto/koelskab.webp" alt="Koeleskab" />
+        <img src="foto/koel.webp" alt="Koel logo" />
+      </div>
+    </div>
+    <div>
+      <h1>VIDEO</h1>
+      <video controls="" src="https://www.birdmedia.dk/kea/05_indhold/01_pilot/pilot_site/interviewet.mp4"></video>
+      <iframe src="https://www.youtube.com/watch?v=9PWOjHV0MZU"></iframe>
+    </div>
   </body>
 </html>
